src/app/components/window/window.module.css
.windowRestored {
  display: flex;
  border-radius: 1.5% 1.5% 0 0;
  overflow: hidden;
}
.windowMaximized {
  display: flex;
  overflow: hidden;
}
.windowMinimized {
  visibility: hidden;
}

.titleBarCombined {
  height: 100%;
  width: 100%;
}
.titleBar {
  background: rgb(8, 88, 238);
  background: linear-gradient(
    180deg,
    rgba(8, 88, 238, 1) 0%,
    rgba(42, 144, 255, 1) 2%,
    rgba(42, 144, 255, 1) 5%,
    rgba(11, 80, 209, 1) 10%,
    rgba(7, 85, 229, 1) 70%,
    rgba(12, 108, 252, 1) 84%,
    rgba(5, 68, 205, 1) 97%
  );
  top: 0;
  left: 0;
  height: 30px;
  width: 100%;

  display: flex;
  align-items: center;
  user-select: none;
}
.titleBarInactive {
  background: rgb(99, 132, 196);
  background: linear-gradient(
    180deg,
    rgba(99, 132, 196, 1) 0%,
    rgba(153, 181, 238, 1) 2%,
    rgba(153, 181, 238, 1) 5%,
    rgba(112, 145, 212, 1) 10%,
    rgba(130, 161, 231, 1) 70%,
    rgba(148, 177, 228, 1) 84%,
    rgba(131, 148, 218, 1) 97%
  );
  top: 0;
  left: 0;
  height: 30px;
  width: 100%;

  display: flex;
  align-items: center;
  user-select: none;
}
.titleBarDraggable {
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
}
.titleBarBottom {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  height: calc(100% - 30px);
  width: 100%;
  box-sizing: border-box;
  background-color: white;
  border-right: solid #0763f6;
  border-left: solid #0763f6;
  border-bottom: solid #0763f6;
  border-width: 0px 4px 4px 4px;
}
.iframeShadow {
  position: absolute;
  margin-left: 4px;
  height: calc(100% - 34px);
  width: calc(100% - 8px);
  box-shadow: inset 0px 0px 2px 1px black;
  user-select: none;
}
.titleBarBottomInactive {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  height: calc(100% - 30px);
  width: 100%;
  background-color: white;
  box-sizing: border-box;
  border-right: solid #82a1e7;
  border-left: solid #82a1e7;
  border-bottom: solid #82a1e7;
  border-width: 0px 4px 4px 4px;
  box-shadow: inset 0px 0px 2px 1px #425175;
}
.titleBarBottomMaximized {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  height: calc(100% - 30px);
  width: 100%;
  background-color: white;
}
.titleBarIcon {
  height: 50%;
  width: auto;
  margin: 7px;
  filter: drop-shadow(1px 1px 2px #143384);
}
.titleBarIconInactive {
  height: 50%;
  width: auto;
  margin: 7px;
  filter: drop-shadow(1px 1px 2px #425175);
  opacity: 0.8;
}
.titleBarLabel {
  color: #f0f8fe;
  font-size: 90%;
  text-overflow: ellipsis;
  overflow: hidden;
  text-shadow: black 1px 1px 2px;
  user-select: none;
}

.controlButtons {
  margin-left: auto;
  margin-right: 7px;

  display: flex;
  height: 100%;
  width: fit-content;
  align-items: center;
}
.controlButtonsInactive {
  margin-left: auto;
  margin-right: 7px;

  display: flex;
  height: 100%;
  width: fit-content;
  align-items: center;
  opacity: 0.6;
}
.controlButton {
  height: 70%;
  width: auto;
  margin: 1px;
  filter: drop-shadow(0px 0px 1px #143384);
}
.controlButton:hover {
  height: 70%;
  width: auto;
  margin: 1px;
  filter: drop-shadow(0px 0px 1px #143384) brightness(130%);
}
.controlButtonClicked {
  height: 70%;
  width: auto;
  margin: 1px;
  filter: drop-shadow(0px 0px 1px #143384) brightness(70%);
}

.addressBar {
  display: flex;
  align-items: center;
  background-color: #eeebd9;
  height: 40px;
  box-shadow: inset 0px -5px 5px -5px black;
}
.addressLabel {
  color: #837f77;
  font-size: 14px;
  margin: 10px;
  user-select: none;
}
.urlBar {
  display: flex;
  align-items: center;
  background-color: white;
  height: 75%;
  width: 90%;
  border: solid #7f9db9;
  border-width: 1px;
  user-select: auto;
}
.urlBarIcon {
  height: 60%;
  width: auto;
  margin: 3px;
  filter: drop-shadow(3px 2px 1px #6d6d79);
  user-select: none;
}
.urlBarLabel {
  font-size: 14px;
  margin: 5px;
}
.popOutButtonContainer {
  display: flex;
  height: 80%;
  margin: 5px;
  flex-grow: 1;
  align-items: center;
  justify-content: center;
  user-select: none;
}
.popOutButtonContainer:hover {
  display: flex;
  height: 80%;
  margin: 5px;
  flex-grow: 1;
  align-items: center;
  justify-content: center;
  border-radius: 5%;
  box-shadow: inset 0px 0px 4px 1px #6d6d79;
}
.popOutButton {
  height: 80%;
  width: auto;
  margin: 8px;
}
.iframe {
  user-select: none;
}

